fix eclipse errors in cesecore-entity